--- a/templates/dataviz_cash_m/dashbord-dms.html
+++ b/templates/dataviz_cash_m/dashbord-dms.html
@@ -58,7 +58,7 @@
 </div>
 
 
-{#=========================== Test ===================================#}
+=========================== Test ===================================
 <div class="row">
     <!-- Récapitulatif Univers -->
 	<div class="col-lg-6 p-1 wow fadeInUp" data-wow-delay="0.5s">
@@ -100,8 +100,7 @@
 		</div>
 	</div>
 </div>
-
-{#=========================== Test ===================================#}
+=========================== Test ===================================
 
 <!-- Premième ligne du tableau de bord de Portefeuille -->
 <div class="row">
@@ -155,7 +154,7 @@
     <script src="{% static 'finlab/vendor/datepicker/js/bootstrap-datepicker.min.js' %}"></script>
 
     <!-- -- Perso -- -->
-{#    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community@29.2.0/dist/ag-grid-community.min.js"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community@29.2.0/dist/ag-grid-community.min.js"></script>
     <script src="{% static 'finlab/vendor/ag-grid-community/dist/ag-grid-community.min.js' %}"></script>
     <script src="{% static 'finlab/vendor/echarts/dist/echarts.min.js' %}"></script>
     <script src="{% static 'dataviz_cash_m/js/global_variable.js' %}"></script>
@@ -218,7 +217,7 @@
             let univers = document.getElementById('univers').value;
             let product = document.getElementById('product').value;
 
-            //{#getData(univers, product, startDate, endDate);#}
+            //{#getData(univers, product, startDate, endDate);
           getData({
             body: {
               univers: univers,
