--- a/templates/dataviz_cash_m/suivi_produits/includes/grid.html
+++ b/templates/dataviz_cash_m/suivi_produits/includes/grid.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" sizes="76x76" href="/static/css/style_grid.css">
+{% load static %}
+<link rel="stylesheet" sizes="76x76" href="{% static 'dataviz_cash_m/css/style_grid.css' %}">
 
 <script>
   //===================== Fin du Tableau =====================
