--- a/templates/dataviz_cash_m/suivi_produits/includes/script.html
+++ b/templates/dataviz_cash_m/suivi_produits/includes/script.html
@@ -1,4 +1,2 @@
-<script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>
-
-<script src="https://unpkg.com/ag-charts-community@6.2.0/dist/ag-charts-community.min.js">
-</script>
+{% load static %}
+<script src="{% static 'finlab/vendor/ag-grid-community/dist/ag-grid-community.min.js' %}"></script>
