--- a/templates/dataviz_cash_m/includes/scripts.html
+++ b/templates/dataviz_cash_m/includes/scripts.html
@@ -1,7 +1,9 @@
 <!--   Core JS Files   -->
+{% load static %}
 
 {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> {% endcomment %}
 
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+{#<script src="/static/bootstrap/js/bootstrap.min.js"></script>#}
+<link rel="stylesheet" href="{% static 'finlab/vendor/bootstrap/css/bootstrap.min.css' %}" >
 
 
