--- a/templates/dataviz_cash_m/suivi_produits/includes/synthese-grid.html
+++ b/templates/dataviz_cash_m/suivi_produits/includes/synthese-grid.html
@@ -1,5 +1,6 @@
-<link rel="stylesheet" sizes="76x76" href="/static/css/style_grid.css">
-<script src="/static/js/utils-grid.js"></script>
+{% load static %}
+<link rel="stylesheet" sizes="76x76" href="{% static 'dataviz_cash_m/css/style_grid.css' %}">
+<script src="{% static 'dataviz_cash_m/js/utils-grid.js' %}"></script>
 
 <script>
   // Tableau recapitulatif des abonnés par produit
